syntax = "proto3";

package test;

option go_package = "./test-api";

service Test {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}